overlays/k3s/webapp-patch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: eshop
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: webapp
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
